navbar fix on mobile

--- a/blitz/staticfiles/css/sass/style.scss
+++ b/blitz/staticfiles/css/sass/style.scss
@@ -6125,7 +6125,7 @@ a#name, a#plan_name, a#client_name {
 }
 
 .navrow .nav {
-  width: 90%;
+  //width: 90%;
   color: white;
   @include transition(0.25s, linear);
   font-size: 0.9em;
@@ -6149,11 +6149,11 @@ a#name, a#plan_name, a#client_name {
   @include mobile-only {
     display: block;
   }
-  width: 22px;
-  height: 20px;
-  float: right;
-  padding: 10px;
-  margin-top: 15px;
+  //width: 22px;
+  //height: 20px;
+  //float: right;
+  //padding: 10px;
+  //margin-top: 15px;
   :hover {
     cursor: pointer;
   }
@@ -6165,7 +6165,7 @@ a#name, a#plan_name, a#client_name {
   font-size: 0.9em;
   letter-spacing: -1px;
   text-transform: capitalize;
-  padding: 30px 15px;
+  //padding: 30px 15px;
   @include meta();
   :hover {
     color: $blitz-blue;
@@ -6189,7 +6189,7 @@ a#name, a#plan_name, a#client_name {
 
 #bs-example-navbar-collapse-1 {
   @include mobile-only {
-    width: 100%;
+    //width: 100%;
   }
 }
 
@@ -6203,7 +6203,7 @@ a#name, a#plan_name, a#client_name {
 
 #bs-example-navbar-collapse-1 li {
   @include mobile-only {
-    width: 100%;
+    //width: 100%;
     text-align: center;
     background: #333;
   }
@@ -6599,4 +6599,8 @@ label#id_front_image.btn-outline :hover, label#id_side_image.btn-outline :hover 
   @include mobile-only {
     padding: 20px;
   }
+}
+
+.navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
+max-height: 440px;
 }
